fix z-index in header

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,7 +29,7 @@ header {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     position: sticky;
     top: 0;
-    z-index: 10000;
+    z-index: 9999;
 }
 
 .navbar {
